adjusted files and code for fonda